# rbdl-pendulum

./: .gitignore  CMakeLists.txt  README.md
data/: pendulum_luamodel.lua
src/: pendulumDynamics_IntegrationWithBoost.cc
